RESOLVED FIXED179117
Regression(r219659): Can no longer log into ifttt.com using Google account
https://bugs.webkit.org/show_bug.cgi?id=179117
Summary Regression(r219659): Can no longer log into ifttt.com using Google account
Chris Dumez
Reported 2017-11-01 08:49:10 PDT
Regression(r219659): Can no longer log into ifttt.com using Google account: - Signed into a Google account already - Visit https://ifttt.com/login - Click "Continue with Google" - Select the signed in account See https://bugzilla.mozilla.org/show_bug.cgi?id=1412741 & https://github.com/whatwg/html/issues/3183
Attachments
Patch (19.20 KB, patch)
2017-11-01 09:57 PDT, Chris Dumez
no flags
Archive of layout-test-results from ews105 for mac-elcapitan-wk2 (1.15 MB, application/zip)
2017-11-01 10:42 PDT, Build Bot
no flags
Archive of layout-test-results from ews101 for mac-elcapitan (1023.81 KB, application/zip)
2017-11-01 10:52 PDT, Build Bot
no flags
Archive of layout-test-results from ews125 for ios-simulator-wk2 (1011.96 KB, application/zip)
2017-11-01 11:18 PDT, Build Bot
no flags
Patch (21.66 KB, patch)
2017-11-01 12:01 PDT, Chris Dumez
no flags
Chris Dumez
Comment 1 2017-11-01 09:57:22 PDT
Build Bot
Comment 2 2017-11-01 10:42:09 PDT
Comment on attachment 325582 [details] Patch Attachment 325582 [details] did not pass mac-wk2-ews (mac-wk2): Output: http://webkit-queues.webkit.org/results/5063497 New failing tests: js/dom/getOwnPropertyDescriptor.html
Build Bot
Comment 3 2017-11-01 10:42:10 PDT
Created attachment 325588 [details] Archive of layout-test-results from ews105 for mac-elcapitan-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews105 Port: mac-elcapitan-wk2 Platform: Mac OS X 10.11.6
Build Bot
Comment 4 2017-11-01 10:52:27 PDT
Comment on attachment 325582 [details] Patch Attachment 325582 [details] did not pass mac-ews (mac): Output: http://webkit-queues.webkit.org/results/5063736 New failing tests: js/dom/getOwnPropertyDescriptor.html
Build Bot
Comment 5 2017-11-01 10:52:28 PDT
Created attachment 325590 [details] Archive of layout-test-results from ews101 for mac-elcapitan The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews101 Port: mac-elcapitan Platform: Mac OS X 10.11.6
Build Bot
Comment 6 2017-11-01 11:18:51 PDT
Comment on attachment 325582 [details] Patch Attachment 325582 [details] did not pass ios-sim-ews (ios-simulator-wk2): Output: http://webkit-queues.webkit.org/results/5063776 New failing tests: js/dom/getOwnPropertyDescriptor.html
Build Bot
Comment 7 2017-11-01 11:18:53 PDT
Created attachment 325596 [details] Archive of layout-test-results from ews125 for ios-simulator-wk2 The attached test failures were seen while running run-webkit-tests on the ios-sim-ews. Bot: ews125 Port: ios-simulator-wk2 Platform: Mac OS X 10.12.6
Chris Dumez
Comment 8 2017-11-01 12:01:20 PDT
Geoffrey Garen
Comment 9 2017-11-01 12:16:56 PDT
Comment on attachment 325606 [details] Patch r=me
WebKit Commit Bot
Comment 10 2017-11-01 12:39:16 PDT
Comment on attachment 325606 [details] Patch Clearing flags on attachment: 325606 Committed r224287: <https://trac.webkit.org/changeset/224287>
WebKit Commit Bot
Comment 11 2017-11-01 12:39:17 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 12 2017-11-15 12:32:03 PST
Note You need to log in before you can comment on or make changes to this bug.